Código fonte do site G12Net

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Source-code for the G12Net Official Website.
+    
+    Author: Matheus S. da Silva -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
