--- a/index.html
+++ b/index.html
@@ -810,6 +810,7 @@ footer i {
     </section>
     <section>
       <style>
+        
         .promo-banner-container {
             display: flex;
             flex-wrap: wrap;
@@ -823,7 +824,7 @@ footer i {
         
         .promo-banner {
             flex: 1 1 300px;
-            max-width: 1660px;
+            max-width: 768px;
             height: 357px;
             background-color: #007BFF;
             color: white;
@@ -881,7 +882,7 @@ footer i {
     <br>
     <br>
     <br>
-    <!-- Espaço para inserir banners promocionais. Medidas: A:370px L:1660px -->
+    <!-- Espaço para inserir banners promocionais. Medidas para desktop: A:370px L:1660px -->
     <div class="promo-banner-container"> 
         <div class="promo-banner">
             <h3></h3>
